# gateway-api-rs

./: .gitattributes  .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  TODO.md  deny.toml  rustfmt.toml  update.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: test.yaml
extensions/inference/: Cargo.toml
extensions/inference/src/: lib.rs
extensions/inference/src/apis/experimental/: common.rs  inferenceobjectives.rs  inferencepools.rs  mod.rs
extensions/inference/src/apis/standard/: common.rs  inferencepools.rs  mod.rs
gateway-api/: CHANGELOG.md  Cargo.toml
gateway-api/examples/: Cargo.toml  gep2257.rs
gateway-api/src/: duration.rs  lib.rs
gateway-api/src/apis/: mod.rs
gateway-api/src/apis/experimental/: backendtlspolicies.rs  common.rs  constants.rs  enum_defaults.rs  gatewayclasses.rs  gateways.rs  grpcroutes.rs  httproutes.rs  listenersets.rs  mod.rs  referencegrants.rs  tcproutes.rs  tlsroutes.rs  udproutes.rs  xbackendtrafficpolicies.rs  xmeshes.rs
gateway-api/src/apis/processed/: common_types.rs  enum_defaults.rs  gateways.rs  grpcroutes.rs  httproutes.rs  mod.rs
gateway-api/src/apis/standard/: backendtlspolicies.rs  common.rs  constants.rs  enum_defaults.rs  gatewayclasses.rs  gateways.rs  grpcroutes.rs  httproutes.rs  listenersets.rs  mod.rs  referencegrants.rs  tlsroutes.rs
gateway-api/src/experimental/: gatewayclasses.rs  grpcroutes.rs  udproutes.rs
gateway-api/src/gateway_api/: mod.rs  time_duration.rs
gateway-api/src/standard/: gatewayclasses.rs  gateways.rs  grpcroutes.rs
gateway-api/tests/integration/: backendtlspolicy.rs  common.rs  experimental_gateway.rs  experimental_gateway_class.rs  experimental_grpcroute.rs  experimental_httproute.rs  experimental_listenerset.rs  experimental_referencegrant.rs  experimental_tcproute.rs  experimental_tlsroute.rs  experimental_udproute.rs  experimental_xbackendtrafficpolicy.rs  experimental_xmesh.rs  gateway.rs  gateway_class.rs  grpcroute.rs  httproute.rs  listenerset.rs  main.rs  referencegrant.rs  tlsroute.rs
scripts/generators/: gateway.sh
scripts/generators/extensions/: inference.sh
src/: lib.rs
src/apis/experimental/: enum_defaults.rs  gatewayclasses.rs  gateways.rs  grpcroutes.rs  httproutes.rs  mod.rs  referencegrants.rs  tcproutes.rs  tlsroutes.rs  udproutes.rs
src/apis/standard/: enum_defaults.rs  gatewayclasses.rs  gateways.rs  httproutes.rs  mod.rs  referencegrants.rs
tools/enum_default_generator/src/: main.rs
type-reducer/: Cargo.toml  README.md  customized_mapped_names.txt  customized_mapped_names_pass_1.txt  customized_mapped_names_pass_1_with_enums.txt  customized_mapped_names_pass_2.txt  customized_mapped_names_pass_3_with_enums.txt  customized_mapped_names_pass_4_with_enums.txt  experimental_customized_mapped_names.txt  experimental_ignorable_mapped_names.txt  experimental_reduced_types_pass_0.txt  experimental_reduced_types_pass_1.txt  experimental_reduced_types_pass_2.txt  experimental_reduced_types_pass_3.txt  experimental_reduced_types_pass_4.txt  experimental_rename_only_mapped_names.txt  mapped_names.txt  mapped_types_to_names.txt  reduce_types.sh  reduced_types_pass_0_with_enums.txt  reduced_types_pass_1.txt  reduced_types_pass_1_with_enums.txt  reduced_types_pass_2.txt  reduced_types_pass_2_with_enums.txt  reduced_types_pass_3.txt  reduced_types_pass_3_with_enums.txt  reduced_types_pass_4_with_enums.txt  standard_customized_mapped_names.txt  standard_reduced_types_pass_1.txt  standard_reduced_types_pass_2.txt  standard_reduced_types_pass_3.txt  standard_rename_only_mapped_names.txt
type-reducer/extension/inference/: experimental_customized_mapped_names.txt  experimental_rename_only_mapped_names.txt  standard_customized_mapped_names.txt  standard_rename_only_mapped_names.txt
type-reducer/src/: lib.rs  main.rs  visitors.rs
xtask/: Cargo.toml
xtask/src/: main.rs
