[workspace]
members = ["gateway-api", "gateway-api/examples", "xtask", "type-reducer"]
resolver = "2"

[workspace.package]
authors = ["kube-rs project (https://kube.rs)"]
edition = "2024"
license = "MIT"
version = "0.20.0"

[workspace.dependencies]
anyhow = "1.0.100"
delegate = "0.13.5"
hyper-util = "0.1.19"
kube = { version = "3.0.0", default-features = false }
kube-core = { version = "3.0.0", default-features = false }
kube-derive = { version = "3.0.0" }
k8s-openapi = { version = "0.27.0" }
once_cell = "1.21.3"
regex = { package = "regex-lite", version = "0.1.8" }
schemars = "1.2.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
