[workspace]
members = ["gateway-api", "gateway-api/examples", "xtask"]
resolver = "2"

[workspace.package]
authors = ["Shane Utt <shaneutt@linux.com>"]
edition = "2024"
rust-version = "1.92"
license = "MIT"
version = "0.21.0"

[workspace.dependencies]
anyhow = "1.0.102"
delegate = "0.13.5"
hyper-util = "0.1.20"
kube = { version = "3.1.0" }
k8s-openapi = { version = "0.27.1" }
regex = { package = "regex-lite", version = "0.1.9" }
schemars = "1.2.1"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = "3"
uuid = { version = "1.23.0", features = ["v4", "fast-rng"] }
