[package]
name = "gateway-api"
version = "0.11.0"
description = "Kubernetes Gateway API bindings in Rust"
authors = ["Shane Utt <shaneutt@linux.com>"]
license = "MIT"
keywords = ["kubernetes", "gateway-api"]
categories = ["api-bindings"]
homepage = "https://gateway-api.sigs.k8s.io/"
repository = "https://github.com/kube-rs/gateway-api-rs"
edition = "2021"
readme = "../README.md"

[dependencies]
kube = { version = "0.96.0", default-features = false, features = ["derive"] }
k8s-openapi = { version = "0.23.0", features = [ "schemars" ] }
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
serde_yaml = "0.9.34"
regex = { package = "regex-lite", version = "0.1.6" }
delegate = "0.13.1"
once_cell = "1.20.2"

[dev-dependencies]
anyhow = "1.0.90"
hyper-util = "0.1.9"
kube = { version = "0.96.0" }
k8s-openapi = { version = "0.23.0" , features = ["v1_31", "schemars"] }
tokio = { version = "1.40.0", features = ["macros"] }
tower = { version = "0.5.1", features = ["limit"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }

[package.metadata.docs.rs]
features = "k8s-openapi/v1_31"
