[package]
name = "gateway-api"
description = "Kubernetes Gateway API bindings in Rust"
categories = ["api-bindings"]
keywords = ["kubernetes", "gateway-api"]

homepage = "https://docs.rs/gateway-api/"
readme = "../README.md"
repository = "https://github.com/kube-rs/gateway-api-rs"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
delegate.workspace = true
k8s-openapi = { workspace = true, features = ["schemars"] }
kube = { workspace = true, features = ["derive"] }
regex.workspace = true
schemars.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
k8s-openapi = { workspace = true, features = ["v1_32", "schemars"] }
kube = { workspace = true, features = ["derive"] }

anyhow.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tower.workspace = true

[package.metadata.docs.rs]
features = ["k8s-openapi/v1_32"]

[features]
default = []
experimental = []
