[package]
name = "gateway-api-examples"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.release]
release = false

[dependencies]
gateway-api = { path = "../", version = "0.21.0" }
k8s-openapi.workspace = true

[features]
default = ["k8s-openapi/v1_32"]

[[bin]]
name = "gep2257"
path = "gep2257.rs"
